Member 레포지토리, DTO, 레포지토리 테스트 개발 (#4)
* Feat: Member 엔티티 설계 일부 변경(권한 필드 추가, 연관 엔티티 이름 및 설계 변경)

* Feat: Member DTO 개발

* Fix: Member 엔티티에 Bean Validation 추가

* Feat: Member 레포지토리 테스트 개발

* Fix: 코드 리뷰 반영

* Fix: GlobalExceptionHandler - log 구조, ErrorResponse 응답 메세지 일부 변경

* Fix: ErrorResponse 생성자에서 errors 필드 null 방지

* Faet: JwtTokenProvider 리프레시 토큰 생성 메서드 추가

* Fix: BusinessException 생성자 public으로 변경

* Feat: ErrorCode 종류 추가

* Fix: 토큰을 쿠키에 저장 + RTR 방식 채용으로 인한 로직 변경

* Feat: 로그인, 로그아웃, 회원가입 서비스 로직 개발

* Feat: 로그인, 로그아웃, 회원가입 컨트롤러 개발

* Refactor: 공통 로직 메서드 추출

* Fix: 코드 리뷰 반영

* Feat: MemberAuthControllerTest - 회원가입 테스트

* Feat: MemberAuthControllerTest - 로그인, 로그아웃, 토큰 재발급 테스트 개발

* Refactor: 불필요한 import문 제거

* Feat: MemberAuthServiceTest 로그인 관련 서비스 레이어 테스트 작성

* Fix: 코드 리뷰 반영

* Fix: MemberAuthService.validateJoinMember() 검증 로직 수정

* Refactor: 컨벤션에 맞게 줄바꿈 변경

* Fix: MemberAuthServiceTest - 토큰 재발급 실패 테스트 검증 추가

* Feat: 회원가입, 로그인, 로그아웃 통합 테스트

* Fix: 토큰 재발급 실패 테스트 검증 수정

* Refactor: MemberAuthService가 던지는 예외 클래스 일부 변경